--- a/Contact_book/views/contacts/new.ejs
+++ b/Contact_book/views/contacts/new.ejs
@@ -18,8 +18,8 @@
           <input type="text" id="email" name="email" value="">
         </div>
         <div>
-          <label for="phone">Phone</label>
-          <input type="text" id="phone" name="phone" value="">
+          <label for="phoneNum">PhoneNumber</label>
+          <input type="text" id="phoneNum" name="phoneNum" value="">
         </div>
         <div>
           <button type="submit">Submit</button>
