Fix: 수정 lable 명 PhoneNum -> Phone (input 정렬로 글자를 가림)

--- a/Contact_book/views/contacts/edit.ejs
+++ b/Contact_book/views/contacts/edit.ejs
@@ -18,7 +18,7 @@
           <input type="text" id="email" name="email" value="<%= contact.email %>">
         </div>
         <div>
-          <label for="phoneNum">PhoneNumbers</label>
+          <label for="phoneNum">Phone</label>
           <input type="text" id="phoneNum" name="phoneNum" value="<%= contact.phone %>">
         </div>
         <div>
