--- a/Contact_book/views/contacts/new.ejs
+++ b/Contact_book/views/contacts/new.ejs
@@ -18,7 +18,7 @@
           <input type="text" id="email" name="email" value="">
         </div>
         <div>
-          <label for="phoneNum">PhoneNumber</label>
+          <label for="phoneNum">Phone</label>
           <input type="text" id="phoneNum" name="phoneNum" value="">
         </div>
         <div>
