Fix: 수정 전화번호 가져올 때 인스턴스명 표기(phone -> phoneNum)

--- a/Contact_book/views/contacts/edit.ejs
+++ b/Contact_book/views/contacts/edit.ejs
@@ -19,7 +19,7 @@
         </div>
         <div>
           <label for="phoneNum">Phone</label>
-          <input type="text" id="phoneNum" name="phoneNum" value="<%= contact.phone %>">
+          <input type="text" id="phoneNum" name="phoneNum" value="<%= contact.phoneNum %>">
         </div>
         <div>
           <button type="submit">Submit</button>
