--- a/Contact_book/views/contacts/show.ejs
+++ b/Contact_book/views/contacts/show.ejs
@@ -12,7 +12,7 @@
         <h3><%= contact.name%></h3>
         <label>Email</label> : <span><%= contact.email %></span>
         <br>
-        <label>Phone</label> : <span><%= contact.phone %></span>
+        <label>Phone</label> : <span><%= contact.phoneNum %></span>
       </div>
       <div class="contact-menu">
         <a href="/contacts/<%= contact._id %>/edit">Edit</a> <!-- 1 -->
